chore: add styl files to editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,5 +9,8 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.styl]
+indent_size = 4
+
 [*.md]
 trim_trailing_whitespace = false
