--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.styl]
+[*.{styl,sh}]
 indent_size = 4
 
 [*.md]
